Fixed overflow on body

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,12 @@
 body {
     font-family: 'Bebas Neue', cursive;
     font-family: 'Raleway', sans-serif;
+    overflow-x: hidden;
+}
+
+.container{
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 /* Bounce effect on images */
